10/data/attachments/3725a54d06f66561.txt
INFO     root:test_arceos.py:58 kernel_type=monokernel
INFO     root:test_arceos.py:59 test_cmd=cd /home/runner/work/Starry/Starry && export PATH=$PATH:/home/runner/.cargo/bin:/home/runner/work/Starry/Starry/riscv64-linux-musl-cross/bin && ./build_img.sh riscv64 sdcard && make A=apps/oscomp ARCH=riscv64 TC=libc-static-2 run
INFO     root:test_arceos.py:61 res=30+0 records in
30+0 records out
125829120 bytes (126 MB, 120 MiB) copied, 0.12018 s, 1.0 GB/s
mkfs.fat 4.2 (2021-01-31)
Copying riscv64 fat32 sdcard/* to disk
    [92;1mBuilding[0m App: oscomp, Arch: riscv64, Platform: riscv64-qemu-virt, App type: rust
[37mcargo build[0m [90m--target riscv64gc-unknown-none-elf --target-dir /home/runner/work/Starry/Starry/target --release  --manifest-path apps/oscomp/Cargo.toml --features "syscall_entry/log-level-off syscall_entry/fp_simd syscall_entry/syscall_fs syscall_entry/syscall_mem syscall_entry/syscall_task syscall_entry/futex syscall_entry/signal syscall_entry/img syscall_entry/syscall_net syscall_entry/fatfs"[0m
   Compiling axdriver v0.1.0 (/home/runner/work/Starry/Starry/modules/axdriver)
   Compiling axfs v0.1.0 (/home/runner/work/Starry/Starry/modules/axfs)
   Compiling axnet v0.1.0 (/home/runner/work/Starry/Starry/modules/axnet)
   Compiling axmem v0.1.0 (/home/runner/work/Starry/Starry/modules/axmem)
   Compiling syscall_utils v0.1.0 (/home/runner/work/Starry/Starry/ulib/axstarry/syscall_utils)
   Compiling axprocess v0.1.0 (/home/runner/work/Starry/Starry/modules/axprocess)
   Compiling axruntime v0.1.0 (/home/runner/work/Starry/Starry/modules/axruntime)
   Compiling axfeat v0.1.0 (/home/runner/work/Starry/Starry/api/axfeat)
   Compiling arceos_api v0.1.0 (/home/runner/work/Starry/Starry/api/arceos_api)
   Compiling syscall_fs v0.1.0 (/home/runner/work/Starry/Starry/ulib/axstarry/syscall_fs)
   Compiling syscall_task v0.1.0 (/home/runner/work/Starry/Starry/ulib/axstarry/syscall_task)
   Compiling syscall_net v0.1.0 (/home/runner/work/Starry/Starry/ulib/axstarry/syscall_net)
warning: unused import: `core::ptr::slice_from_raw_parts_mut`
 --> ulib/axstarry/syscall_task/src/imp/task.rs:3:5
  |
3 | use core::ptr::slice_from_raw_parts_mut;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `axtask::current`
 --> ulib/axstarry/syscall_task/src/imp/task.rs:4:5
  |
4 | use axtask::current;
  |     ^^^^^^^^^^^^^^^

warning: unused imports: `PR_NAME_SIZE`, `PrctlOption`
  --> ulib/axstarry/syscall_task/src/imp/task.rs:26:21
   |
26 | use syscall_utils::{PrctlOption, PR_NAME_SIZE};
   |                     ^^^^^^^^^^^  ^^^^^^^^^^^^

error[E0425]: cannot find function `syscall_prctl` in this scope
   --> ulib/axstarry/syscall_task/src/lib.rs:107:18
    |
107 |         PRCTL => syscall_prctl(args[0], args[1] as *mut u8),
    |                  ^^^^^^^^^^^^^ help: a function with a similar name exists: `syscall_exit`
    |
   ::: ulib/axstarry/syscall_task/src/imp/task.rs:35:1
    |
35  | pub fn syscall_exit(exit_code: i32) -> ! {
    | ---------------------------------------- similarly named function `syscall_exit` defined here

For more information about this error, try `rustc --explain E0425`.
warning: `syscall_task` (lib) generated 3 warnings
error: could not compile `syscall_task` (lib) due to previous error; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
make: *** [scripts/make/build.mk:41: _cargo_build] Error 101